[CI] Fixing lint issues